--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <audio autoplay="true" loop="true">
+  <audio id="bg-audio" autoplay="true" loop="true">
     <source src="assets/Avanti - Je T'aime.mp3" type="audio/mpeg">
   </audio>
   <!-- First-time popup -->
